[workspace]
resolver = "2"
members = [
    "crates/rhdl",
    "crates/rhdl-bits",
    "crates/rhdl-bsp",
    "crates/rhdl-core",
    "crates/rhdl-fpga",
    "crates/rhdl-macro",
    "crates/rhdl-macro-core",
    "crates/rhdl-span",
    "crates/rhdl-trace-type",
    "crates/rhdl-typenum",
    "crates/rhdl-vlog",
"doc/mdbook-rhdl",
]
