[package]
name = "rhdl-basic-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
indexmap = "2.0.0"
rhdl-log = { version = "0.1.0", path = "../rhdl-log" }
serde = { version = "1.0.188", features = ["derive"] }
vcd = "0.7.0"
