[package]
name = "rhdl-bits"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Support crate for RHDL that provides a Bits type."
homepage = "https://rhdl.org"
repository = "https://github.com/samitbasu/rhdl"
keywords = ["fpga", "hdl", "hardware", "binary", "bitvec"]

[dependencies]
derive_more = "0.99.17"
seq-macro = "0.3.5"
