[package]
name = "rhdl-bits"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Support crate for RHDL that provides a Bits type."
homepage = "https://rhdl.org"
repository = "https://github.com/samitbasu/rhdl"
keywords = ["fpga", "hdl", "hardware", "binary", "bitvec"]

[dependencies]
seq-macro = "0.3.5"
typenum = "1.17.0"
