[package]
name = "rhdl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ariadne = { version = "0.4.0", features = ["auto-color"] }
fnv = "1.0.7"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
parking_lot = "0.12.1"
petgraph = "0.6.4"
prettyplease = "0.2.15"
rhdl-bits = { path = "../rhdl-bits" }
seq-macro = "0.3.5"
serde = { version = "^1", features = ["derive"] }
svg = { version = "0.14.0", optional = true }
syn = "2.0.38"
tempfile = "3.8.1"
vcd = "0.7.0"

[features]
default = ["svg", "iverilog"]
svg = ["dep:svg"]
iverilog = []
