[package]
name = "rhdl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
fnv = "1.0.7"
internment = "0.8.6"
itertools = "0.12.0"
log = "0.4.20"
miette = { version = "7.2.0" }
num-bigint = "0.4.6"
parking_lot = "0.12.1"
petgraph = "0.6.4"
prettyplease = "0.2.15"
rhdl-bits = { path = "../rhdl-bits" }
rhdl-trace-type = { version = "0.1.0", path = "../rhdl-trace-type" }
ron = "0.8.1"
seq-macro = "0.3.5"
smallvec = "1.13.2"
svg = { version = "0.14.0", optional = true }
syn = "2.0.38"
tempfile = "3.8.1"
thiserror = "1.0.61"
vcd = "0.7.0"

[features]
default = ["svg", "iverilog"]
svg = ["dep:svg"]
iverilog = []

[dev-dependencies]
rand = "0.8.5"
