[package]
name = "rhdl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
array-init = "2.1.0"
fnv = "1.0.7"
internment = "0.8.6"
itertools = "0.12.0"
log = "0.4.20"
miette = { version = "7.2.0" }
num-bigint = "0.4.6"
parking_lot = "0.12.1"
petgraph = "0.6.4"
prettyplease = "0.2.15"
proc-macro2 = { version = "1.0.92", default-features = false, features = [
    "span-locations",
] }
quote = "1.0.37"
rhdl-bits = { path = "../rhdl-bits" }
rhdl-trace-type = { version = "0.1.0", path = "../rhdl-trace-type" }
rhdl-typenum = { path = "../rhdl-typenum" }
ron = "0.8.1"
seq-macro = "0.3.5"
sha2 = "0.10.8"
smallvec = "1.13.2"
svg = { version = "0.14.0", optional = true }
syn = { version = "2.0.38", default-features = false, features = [
    "parsing",
    "printing",
    "extra-traits",
] }
tempfile = "3.8.1"
thiserror = "1.0.61"
vcd = "0.7.0"

[features]
default = ["svg", "iverilog"]
svg = ["dep:svg"]
iverilog = []

[dev-dependencies]
expect-test = "1.5.1"
rand = "0.8.5"
