[package]
name = "rhdl-fpga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
array-init = "2.1.0"
badascii-doc = "0.4.0"
rhdl = { path = "../rhdl" }
strum = { version = "0.25.0", features = ["derive"] }
[dev-dependencies]
env_logger = "0.11.5"
expect-test = "1.5.0"
log = "0.4.22"
miette = "7.2.0"
rand = "0.8.5"
svg = "0.18.0"

[[example]]
name = "ex01"
doc-scrape-examples = true
