[package]
name = "rhdl-fpga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
array-init = "2.1.0"
badascii-doc = "0.4.1"
rand = "0.9.1"
rhdl = { path = "../rhdl" }
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.8"
expect-test = "1.5.0"
log = "0.4.22"
miette = "7.2.0"
simplelog = "0.12.2"
svg = "0.18.0"
