[package]
name = "rhdl-macro-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Support crate for RHDL that provides procedural macro implementations."
homepage = "https://rhdl.org"
repository = "https://github.com/samitbasu/rhdl"
keywords = ["fpga", "hdl", "hardware", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-syn-parse = "0.2.0"
evalexpr = "11.1.0"
inflections = "1.1.1"
prettyplease = "0.2.15"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits", "visit-mut"] }

[dev-dependencies]
expect-test = { version = "1" }
miette = "7.6.0"
syn-miette = "0.3.0"
