[package]
name = "rhdl-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rhdl-bits = { version = "0.1.0", path = "../rhdl-bits" }
rhdl-core = { version = "0.1.0", path = "../rhdl-core" }

[dev-dependencies]
anyhow = "1.0.75"
rhdl-core = { path = "../rhdl-core", features = ["iverilog"] }
