[workspace]

[package]
name = "rhdl-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
fnv = "1.0.7"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
paste = "1.0.14"
petgraph = "0.6.4"
rhdl-bits = { path = "../rhdl-bits" }
rhdl-core = { path = "../rhdl-core" }
rhdl-macro = { path = "../rhdl-macro" }
rhdl-std = { path = "../rhdl-std" }
