[workspace]

[package]
name = "rhdl-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
fnv = "1.0.7"
lazy_static = "1.4.0"
miette = { version = "7.2.0", features = ["fancy"] }
parking_lot = "0.12.1"
paste = "1.0.14"
petgraph = "0.6.4"
proc-macro2 = "1.0.81"
quote = "1.0.36"
rand = "0.8.5"
rhdl = { path = "../rhdl" }
rhdl-fpga = { path = "../rhdl-fpga" }
smallvec = "1.13.2"
syn = { version = "2.0.61", features = ["full", "extra-traits"] }
typenum = "1.17.0"
vcd = "0.7.0"
