[package]
name = "rhdl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Write firmware for FPGAs in Rust (formerly rust-hdl)"
homepage = "https://rhdl.org"
repository = "https://github.com/samitbasu/rhdl"
keywords = ["fpga", "hdl", "verilog", "hardware"]
authors = ["Samit Basu <basu.samit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhdl-bits = { path = "../rhdl-bits" }
rhdl-core = { path = "../rhdl-core", features = ["iverilog"] }
rhdl-macro = { version = "0.0.2", path = "../rhdl-macro" }
rhdl-std = { path = "../rhdl-std" }
anyhow = "1.0.75"
svg = { version = "0.14.0", optional = true }
serde_json = "1.0.64"

[features]
svg = ["rhdl-core/svg", "dep:svg"]

[dev-dependencies]
itertools = "0.12.0"
rand = "0.8.5"
