[package]
name = "rhdl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Write firmware for FPGAs in Rust (formerly rust-hdl)"
homepage = "https://rhdl.org"
repository = "https://github.com/samitbasu/rhdl"
keywords = ["fpga", "hdl", "verilog", "hardware"]
authors = ["Samit Basu <basu.samit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rhdl-bits = { path = "../rhdl-bits" }
#rhdl-core = { path = "../rhdl-core", features = ["iverilog"] }
rhdl-macro = { version = "0.0.2", path = "../rhdl-macro" }
anyhow = "1.0.75"
svg = { version = "0.18.0", optional = true }
serde_json = "1.0.64"
petgraph = "0.6.4"
miette = { version = "7.2.0", features = ["fancy"] }
seq-macro = "0.3.5"
log = "0.4.22"
proc-macro2 = { version = "1.0.93", default-features = false, features = [
    "span-locations",
] }
quote = "1.0.38"
syn = { version = "2.0.96", default-features = false, features = [
    "parsing",
    "printing",
    "full",
    "extra-traits",
] }
fnv = "1.0.7"
num-bigint = "0.4.6"
rhdl-trace-type = { version = "0.1.0", path = "../rhdl-trace-type" }
array-init = "2.1.0"
thiserror = "2.0.11"
internment = "0.8.6"
ron = "0.8.1"
tempfile = "3.15.0"
sha2 = "0.10.8"
smallvec = "1.13.2"
vcd = "0.7.0"

[features]
default = ["svg", "iverilog"]
svg = ["dep:svg"]
iverilog = []
exhaustive-tests = []

[dev-dependencies]
itertools = "0.12.0"
rand = "0.8.5"
env_logger = "0.11.5"
log = "0.4.22"
expect-test = "1.5.0"
static_assertions = "1.1.0"

[profile.test]
inherits = "release"
