[package]
name = "rhdl-bsp"
version = "0.1.0"
edition = "2021"

[dependencies]
rhdl-fpga = { path = "../rhdl-fpga" }
camino = "1.1.9"
expect-test = "1.5.1"
rhdl = { path = "../rhdl" }
serde = "1.0.218"
serde_json = "1.0.140"
thiserror = "2.0.12"
tinytemplate = "1.2.1"
quote = "1.0.40"
syn = "2.0.106"
proc-macro2 = "1.0.101"

[dev-dependencies]
miette = "7.6.0"
