[package]
name = "rhdl-bsp"
version = "0.1.0"
edition = "2024"

[dependencies]
rhdl-fpga = { path = "../rhdl-fpga" }
camino = "1.1.9"
expect-test = "1.5.1"
rhdl = { path = "../rhdl" }
thiserror = "2.0.12"
quote = "1.0.40"
syn = "2.0.106"
proc-macro2 = "1.0.101"
miette = "7.6.0"

[dev-dependencies]
rhdl-toolchains = { path = "../rhdl-toolchains" }
