[package]
name = "rhdl-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
badascii-doc = "0.4.1"
ena = "0.14.3"
expect-test = "1.5.1"
fnv = "1.0.7"
internment = "0.8.6"
log = "0.4.27"
miette = "7.6.0"
num-bigint = "0.4.6"
petgraph = "0.8.2"
proc-macro2 = "1.0.101"
quote = { version = "1.0.40", default-features = false }
rand = "0.9.2"
regex = "1.11.2"
rhdl-bits = { version = "0.1.0", path = "../rhdl-bits" }
rhdl-span = { version = "0.1.0", path = "../rhdl-span" }
rhdl-trace-type = { version = "0.1.0", path = "../rhdl-trace-type" }
rhdl-vlog = { version = "0.1.0", path = "../rhdl-vlog" }
ron = "0.10.1"
seq-macro = "0.3.6"
sha2 = "0.10.9"
smallvec = "1.15.1"
svg = "0.18.0"
syn = "2.0.106"
tempfile = "3.21.0"
thiserror = "2.0.16"
vcd = "0.7.0"

[dev-dependencies]
rand = "0.9.2"
