[package]
name = "rhdl-surfer-plugin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
camino = { version = "1.2.2", features = ["serde1"] }
color-eyre = "0.6.5"
ecolor = "0.31.1"
extism-pdk = "1.3.0"
log = "0.4.29"
num = "0.4.3"
rhdl-trace-type = { version = "0.1.0", path = "../rhdl-trace-type" }
ron = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
surfer-translation-types.branch = "subtranslators"
surfer-translation-types.git = "https://gitlab.com/surfer-project/surfer.git"
