[package]
name = "rhdl-vlog"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
proc-macro2 = { version = "1.0.97", default-features = false }
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0.104", features = ["extra-traits", "full"] }
syn-miette = "0.3.0"
thiserror = "2.0.16"
anyhow = "1.0.88"
tempfile = "3.23.0"

[dev-dependencies]
expect-test = "1.5.1"
test-log = "0.2.18"

# Optional: Add coverage-specific configuration
[profile.coverage]
inherits = "test"
debug = true
opt-level = 0
