[workspace]

[package]
name = "time_tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rhdl = { version = "0.1.0", path = "/Users/samitbasu/Devel/rhdl/crates/rhdl" }
rhdl-fpga = { path = "/Users/samitbasu/Devel/rhdl/crates/rhdl-fpga" }

[dev-dependencies]
env_logger = "0.11.8"
miette = "7.6.0"
